lab1/Test/L1-A-13-33.output
Error Type B at Line 1
Error Type A at Line 10
Error Type A at Line 28
Error Type B at Line 29
Error Type B at Line 31
Error Type B at Line 34
Error Type A at Line 38
Error Type B at Line 51
Error Type B at Line 58
Error Type B at Line 67
